@@ -12,6 +12,9 @@
     * 4214 FIX: jolokia_metrics.tp: Fix crash in case of partial thread information...
     * 4304 FIX: mk_inventory.linux: fixed missing redirection to null device in if statement
 
+    Multisite:
+    * 4315 FIX: Logwatch problematic logfiles list was showing too many logfiles
+
 
 1.2.8p16:
     Core & Setup:
